5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1015.log
== TEST (2019-03-22 15:32:03) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))


-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:34:01) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

print (min(numero1, numero2, numero3))
print (max(numero1, numero2, numero3))





-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:35:31) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

print (min(numero1, numero2, numero3))
print (max(numero1, numero2, numero3))






-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:35:35) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

print (min(numero1, numero2, numero3))
print (max(numero1, numero2, numero3))






-- EXECUTION TIME:
0.132974
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:41:47) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

print (min(numero1, numero2, numero3))
print (max(numero1, numero2, numero3))

valorint =(num1+num2+num3 - min - max)
print (valorint)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valorint =(num1+num2+num3 - min - max)
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:42:11) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

print (min(numero1, numero2, numero3))
print (max(numero1, numero2, numero3))

valorint =(numero1+numero2+numero3 - min - max)
print (valorint)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valorint =(numero1+numero2+numero3 - min - max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:52:33) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

print (min(numero1, numero2, numero3))
print (max(numero1, numero2, numero3))

valormed = (numero1+numero2+numero3) - (min - max)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valormed = (numero1+numero2+numero3) - (min - max)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:55:06) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:55:31) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- EXECUTION TIME:
0.164665
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:56:52) 
-- CODE:
numero1 = int(input("Primeiro numero: "))
numero2 = int(input("Segundo numero: "))
numero3 = int(input("Terceiro numero: "))

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- EXECUTION TIME:
0.195906
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:58:05) 
-- CODE:
numero1 = int(input())
numero2 = int(input())
numero3 = int(input())

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:58:24) 
-- CODE:
numero1 = int(input())
numero2 = int(input())
numero3 = int(input())

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- EXECUTION TIME:
0.156403
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:58:25) 
-- CODE:
numero1 = int(input())
numero2 = int(input())
numero3 = int(input())

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:59:44) 
-- CODE:
numero1 = int(input("Digite o primeiro numero"))
numero2 = int(input("Digite o segundo numero"))
numero3 = int(input("Digite o segundo numero")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:59:54) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:59:57) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- EXECUTION TIME:
0.185923
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:26:33) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:26:39) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- EXECUTION TIME:
0.140072
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:26:48) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:27:35) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:28:02) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print (Y)
print(X)
print(ValorIntermed)





-- OUTPUT:
10
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:28:39) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:29:11) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X-Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:29:24) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:29:30) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

X = (min(numero1, numero2, numero3))
Y = (max(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:30:56) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

Y = (max(numero1, numero2, numero3))
X = (min(numero1, numero2, numero3))
ValorIntermed = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(ValorIntermed)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:35:23) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

Y = (max(numero1, numero2, numero3))
X = (min(numero1, numero2, numero3))
Z = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(Z)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:35:26) 
-- CODE:
numero1 = int(input("Digite o primeiro numero:"))
numero2 = int(input("Digite o segundo numero:"))
numero3 = int(input("Digite o segundo numero:")) 

Y = (max(numero1, numero2, numero3))
X = (min(numero1, numero2, numero3))
Z = (numero1+numero2+numero3) - (X+Y)

print(X)
print (Y)
print(Z)





-- EXECUTION TIME:
0.169169
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:36:24) 
-- CODE:
n1 = int(input("Digite o primeiro numero:"))
n2= int(input("Digite o segundo numero:"))
n3= int(input("Digite o segundo numero:")) 

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print (Y)
print(Z)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:36:27) 
-- CODE:
n1 = int(input("Digite o primeiro numero:"))
n2= int(input("Digite o segundo numero:"))
n3= int(input("Digite o segundo numero:")) 

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print (Y)
print(Z)





-- EXECUTION TIME:
0.129749
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:37:27) 
-- CODE:
n1 = int(input())
n2= int (input())
n3= int (input())

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print (Y)
print(Z)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:37:29) 
-- CODE:
n1 = int(input())
n2= int (input())
n3= int (input())

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print (Y)
print(Z)





-- EXECUTION TIME:
0.134421
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:37:56) 
-- CODE:
n1 = int (input())
n2= int (input())
n3= int (input())

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print (Y)
print(Z)





-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:38:35) 
-- CODE:
n1 = int (input())
n2= int (input())
n3= int (input())

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print(Z)
print(Y)





-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:38:46) 
-- CODE:
n1 = int (input())
n2= int (input())
n3= int (input())

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print(Z)
print(Y)





-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:38:59) 
-- CODE:
n1 = int (input())
n2= int (input())
n3= int (input())

Y = (max(n1, n2, n3))
X = (min(n1, n2, n3))
Z = (n1 + n2 + n3) - (X+Y)

print(X)
print(Z)
print(Y)





-- EXECUTION TIME:
0.145244
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
